# citi-bike

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.lambda  Makefile  README.md  deploy_lambda.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: pipeline.yml
data/: 2024_top3_timeseries.csv  2025_timeseries.csv  download_data.sh
db/: 2024_citibike_top3_stations.sql  2025_citibike_top3_stations.sql  bigquery.sql
dbt/models/: models.yml  sources.yml
dbt/models/marts/: fct_2024_top_trips.sql  fct_2025_top_trips.sql
dbt/models/staging/: stg_trips_2024.sql  stg_trips_2025.sql
flows/: monitoring_data_flow.py  monitoring_performance_flow.py  train_flow.py
grafana/: grafana_datasources.yaml
k8s/: deployment.yaml  hpa.yaml  service.yaml
notebooks/: data_eda.ipynb  modeling.ipynb  notebook.ipynb
src/: data_collection.py  data_processing.py  ingest_to_gcs.py  invoke.py  lambda_function.py  predict.py  serve.py  train.py
tests/: data_processing_test.py
