[project]
name = "citi-bike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "torchstudio>=0.0.2",
    "torchvision>=0.24.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "psycopg2>=2.9.11",
]
