[project]
name = "citi-bike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[project.optional-dependencies]
workflows = [
    "evidently>=0.7.18",
    "mlflow>=3.7.0",
    "prefect>=3.6.7",
]

[dependency-groups]
dev = [
    "boto3>=1.42.11",
    "google-cloud-storage>=3.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "torchstudio>=0.0.2",
    "torchvision>=0.24.1",
]

[tool.ruff]
line-length=88

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP" # pyupgrade
]  

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
